driver: patch for s1

--- a/drivers/clk/sophgo/Makefile
+++ b/drivers/clk/sophgo/Makefile
@@ -1,2 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-$(CONFIG_CLK_SOPHGO_SG2042)	+= clk-sophgo-sg2042.o
+obj-$(CONFIG_CLK_SOPHGO_SG2042)	+= clk-sophgo-sg2042-s1.o
