fixed a stupid issue
Signed-off-by: Chen Wang <unicorn_wang@outlook.com>

--- a/arch/riscv/boot/dts/sophgo/mango-clock-socket1.dtsi
+++ b/arch/riscv/boot/dts/sophgo/mango-clock-socket1.dtsi
@@ -1,5 +1,5 @@
 / {
-	s1_cgi: oscillator {
+	s1_cgi: oscillator-s1 {
 		compatible = "fixed-clock";
 		clock-output-names = "s1_cgi";
 		#clock-cells = <0>;
